--- a/src/app/modules/recruitment/interviewerdashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/recruitment/interviewerdashboard/dashboard/dashboard.component.html
@@ -292,10 +292,11 @@
       </div>
         </div>
       </nb-card-header>
-      <!-- <nb-card-body>
-        <ngx-chartjs-pie></ngx-chartjs-pie>
-      </nb-card-body> -->
+          <nb-card-body>
+            <!-- <chart type="pie" [data]="data" [options]="myPieOptions"></chart> -->
+          </nb-card-body>
     </nb-card>
+
   </div>
 
 </div>
