--- a/src/app/modules/recruitment/admin-dashboard/dashboard/dashboard.component.html
+++ b/src/app/modules/recruitment/admin-dashboard/dashboard/dashboard.component.html
@@ -1,1 +1,123 @@
-<ngx-componentsheader pageName='Dashboard'></ngx-componentsheader>
+<ngx-componentsheader pageName='Recruitment Dashboard'></ngx-componentsheader>
+<div class="container">
+</div>
+
+<div class="row">
+  <div class="col-xxxl-3 col-md-3" >
+    <nb-card>
+      <div style="padding: 10px;display: flex; flex-direction: row;">
+     <div style="display: flex;align-items: center;">
+       <img src="assets/icons/StaffID.jpg" style="width:3rem;">
+     </div>
+     <div style="flex-direction: column; padding-left: 10px;">
+      <div style="padding:5px">
+      <span class="smalltext">
+        Jobs Posted
+      </span>
+      </div>
+      <div style="padding:5px">
+        <span class="header5-bold">356,500</span>
+      </div>
+     </div>
+     </div>
+     </nb-card>
+  </div>
+  <div class="col-xxxl-3 col-md-3" >
+    <nb-card>
+      <div style="padding: 10px;display: flex; flex-direction: row;">
+     <div style="display: flex;align-items: center;">
+       <img src="assets/icons/vendors.png" style="width:3rem;">
+     </div>
+     <div style="flex-direction: column; padding-left: 10px;">
+      <div style="padding:5px">
+      <span class="smalltext">
+        Applications
+      </span>
+      </div>
+      <div style="padding:5px">
+        <span class="header5-bold">567</span>
+      </div>
+     </div>
+     </div>
+     </nb-card>
+  </div>
+  <div class="col-xxxl-3 col-md-3" >
+    <nb-card>
+      <div style="padding: 10px;display: flex; flex-direction: row;">
+     <div style="display: flex;align-items: center;">
+       <img src="assets/icons/successful.jpg" style="width:3rem;">
+     </div>
+     <div style="flex-direction: column; padding-left: 10px;">
+      <div style="padding:5px">
+      <span class="smalltext">
+        Successful Hires
+      </span>
+      </div>
+      <div style="padding:5px">
+        <span class="header5-bold">450</span>
+      </div>
+     </div>
+     </div>
+     </nb-card>
+  </div>
+
+
+  <div class="col-xxxl-3 col-md-3" >
+    <nb-card>
+      <div style="padding: 10px;display: flex; flex-direction: row;">
+     <div style="display: flex;align-items: center;">
+       <img src="assets/icons/rejected.jpg" style="width:3rem;">
+     </div>
+     <div style="flex-direction: column; padding-left: 10px;">
+      <div style="padding:5px">
+      <span class="smalltext">
+        Rejected Offers
+      </span>
+      </div>
+      <div style="padding:5px">
+        <span class="header5-bold">450</span>
+      </div>
+     </div>
+     </div>
+     </nb-card>
+  </div>
+</div>
+
+
+<div class="col-xxxl-12 col-md-12" >
+  <nb-card>
+      <nb-card-body>
+        <div style="display: flex;flex-direction: row;">
+          <div style="flex:auto">
+          <span class="header6-bold">Source of Applications</span>
+          </div>
+          <div>
+            <nb-select selected="1">
+              <nb-option value="1">This year</nb-option>
+              <nb-option value="2">Option 2</nb-option>
+            </nb-select>
+          </div>
+                  </div>
+        <div #barContainer style="height: 100%;">
+          <ngx-charts-bar-vertical
+          [view]="[barContainer.offsetWidth, 300]"
+          [scheme]="barcolorScheme"
+          [results]="single"
+          [gradient]="gradient"
+          [xAxis]="showXAxis"
+          [yAxis]="showYAxis"
+          [legend]="showLegend"
+          [showXAxisLabel]="showXAxisLabel"
+          [showYAxisLabel]="showYAxisLabel"
+          [xAxisLabel]="xAxisLabel"
+          [yAxisLabel]="yAxisLabel"
+          [showGridLines]="showGridLines"
+          [barPadding]="barPadding"
+      >
+        </ngx-charts-bar-vertical>
+        </div>
+
+
+      </nb-card-body>
+    </nb-card>
+</div>
