--- a/src/app/modules/training/administration/administration.component.scss
+++ b/src/app/modules/training/administration/administration.component.scss
@@ -1,11 +1,7 @@
 .center {
-  position: absolute;
-  left: 60%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  padding: 10px;
-  // display: flex;
-  // flex-direction: column;
+display: flex;
+flex-direction: column;
+align-content: center;
   }
 
   .my-button {
