--- a/src/app/modules/training/plans/plans.component.scss
+++ b/src/app/modules/training/plans/plans.component.scss
@@ -1,12 +1,9 @@
 .center {
-  position: absolute;
-  left: 60%;
-  top: 50%;
-  transform: translate(-50%, -50%);
-  padding: 10px;
-  // display: flex;
-  // flex-direction: column;
-  }
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+    }
+
 
   .my-button {
     padding: 10px;
