--- a/src/app/modules/training/requests/requests.component.html
+++ b/src/app/modules/training/requests/requests.component.html
@@ -1,6 +1,6 @@
 <ngx-componentsheader [pageName]="pageTitle"></ngx-componentsheader>
-<div class="container" style="background-color: #ffffff; height: 1000px;"> <!-- <ngx-default-content></ngx-default-content> -->
-<div *ngIf="welcome && requestData ==''" id="home" class="container tab-pane active"><br>
+<div class="container" style="background-color: #ffffff; height: auto;"> <!-- <ngx-default-content></ngx-default-content> -->
+<div *ngIf="welcome && requestData ==''" style="min-height: 100vh; display: flex; flex-direction: row; align-content: center; align-self: center; align-items: center; justify-content:center;"><br>
 
   <ngx-default-content pageHeader={{myRequestHeader}} pageDescription="{{myRequestDesc}}"></ngx-default-content>
 </div>
