--- a/src/app/modules/employeemodule/employeeonboardingdashboard/employeeonboardingdashboard.component.html
+++ b/src/app/modules/employeemodule/employeeonboardingdashboard/employeeonboardingdashboard.component.html
@@ -8,7 +8,7 @@
     </button>
     </div>
     <div class="col-md-6 col-xxl-6">
-      <ngx-bulk-upload [btnoutline]="true" (buttonClick)="getuploadedfiles($event)" ></ngx-bulk-upload>
+      <ngx-bulk-upload [btnoutline]="true" (buttonClick)="getuploadedfiles($event)" btnLabel="Bulk Upload" ></ngx-bulk-upload>
     </div>
   </div>
 
