--- a/src/app/modules/employeemodule/employeeoffer/employeeoffer.component.html
+++ b/src/app/modules/employeemodule/employeeoffer/employeeoffer.component.html
@@ -29,7 +29,7 @@
             <div class="col-md-12"  >
                 <nb-card>
                     <nb-card-body>
-    <div style="display: flex;flex-direction: row;">
+    <div style="display: flex;flex-direction: row;">zz
 <div style="display:flex;flex: auto;align-items: center;">
     <img src="assets/icons/smartaceLogo.png" style="width:10.625rem">
 </div>
