--- a/src/app/modules/employeemodule/existrequest/existrequest.component.html
+++ b/src/app/modules/employeemodule/existrequest/existrequest.component.html
@@ -14,8 +14,7 @@
                     developer</span>
             </div>
             <br>
-
-
+            
             <div>
                 <div class="d-flex mt-4" style="margin-left: 15px;">
                     <div class="mt-2">
@@ -30,7 +29,7 @@
 
                 </div>
                 <div class="d-flex mt-4" style="margin-left: 15px;">
-                    <div class="mt-2">
+                    <div nbButton class="mt-2">
                         <img src="assets/icons/Phone.jpg" style="height: 20px;" alt="">
                     </div>
                     <br>
