--- a/src/app/modules/employeemodule/managementexist/managementexist.component.html
+++ b/src/app/modules/employeemodule/managementexist/managementexist.component.html
@@ -136,7 +136,8 @@
                 <ngx-file-upload class="form-control"></ngx-file-upload>
               </div>
               <div style="padding-left: 10px;display: flex;align-items: center;flex: auto;">
-                <img  style="height: 20px; margin-right: 10px;" src="assets/icons/download.jpg" alt=""><span style="color: blue;">Download file</span>
+                <img style="height: 20px; margin-right: 10px;" src="assets/icons/download.jpg" alt=""><span
+                  style="color: blue;">Download file</span>
               </div>
             </div>
 
@@ -174,10 +175,10 @@
         </div>
 
         <div class="row">
-          <div class="col-sm-4 col-form-label listsubheader"></div> 
+          <div class="col-sm-4 col-form-label listsubheader"></div>
           <div class="col-sm-8" style=" display: flex;justify-content: center; margin-top: 3rem;margin-bottom: 2rem;">
 
-            <button nbButton status="primary"  style="display: flex; justify-content: center;">Proceed</button>
+            <button nbButton status="primary" style="display: flex; justify-content: center;">Proceed</button>
           </div>
 
         </div>
