--- a/src/app/@theme/styles/styles.scss
+++ b/src/app/@theme/styles/styles.scss
@@ -466,3 +466,11 @@ opacity: 1;
   padding-left: 0.3rem;
   padding-right: 0.3rem;
 }
+
+.error {
+  color: #e9230d;
+  font-weight: normal;
+  text-align: left;
+  font-size: 12px;
+  width: 100%;
+}
